--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -83,15 +83,21 @@ jobs:
         done
       env:
         CHROME_HEADLESS: true
-    
-    - name: Save logs to a file
-      run: |
-        mkdir -p logs
-        # Redirecting all logs to a file
-        exec > logs/full_log.txt 2>&1
-        cat $GITHUB_WORKSPACE/logs/full_log.txt
-      continue-on-error: true
 
+  send-log-files:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Upload files to S3
+      uses: jakejarvis/s3-sync-action@v0.6.0
+      with:
+        args: --acl public-read --delete --exclude '.git/*' --exclude '.github/*' --exclude '.gitignore' --exclude '.DS_Store' /Formsflow-RobotFramework/results s3://robotframework-formsflow-logs/
+      env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   check-status:
     runs-on: ubuntu-latest
     needs: robot-framework
