--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -94,11 +94,13 @@ jobs:
     - name: Upload files to S3
       uses: jakejarvis/s3-sync-action@v0.5.1
       with:
-        args: --acl public-read --delete --exclude '.git/*' --exclude '.github/*' --exclude '.gitignore' --exclude '.DS_Store' ./Formsflow-RobotFramework/results s3://robotframework-formsflow-logs/
+        args: --delete
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'ca-central-1'
+        SOURCE_DIR: 'Formsflow-RobotFramework/results'
   check-status:
     runs-on: ubuntu-latest
     needs: send-log-files
