--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -87,6 +87,7 @@ jobs:
 
   send-log-files:
     runs-on: ubuntu-latest
+    needs: robot-framework
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -110,7 +111,7 @@ jobs:
       env:
         GOOGLE_CHAT_WEBHOOK: ${{ secrets.WEBHOOK_URL_HERE }}
       run: |
-        MESSAGE="${{ github.workflow }} workflow failed on branch ${{ github.ref }}.Error Details:${{ job.status }}: ${{ job.name }}${{ job.steps[0].name }}: ${{ job.steps[0].outcome }}"
+        MESSAGE="${{ github.workflow }} job completed on branch ${{ github.ref }}.Error Details:${{ job.status }}: ${{ job.name }}${{ job.steps[0].name }}: ${{ job.steps[0].outcome }}, refer the following link for the logs http://robotframework-formsflow-logs.s3-website.ca-central-1.amazonaws.com/"
           
         python - <<EOF
         import requests
