--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -82,11 +82,13 @@ jobs:
 
   send-log-files:
     runs-on: ubuntu-latest
-    needs: robot-framework
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Delay 2 minutes
+      run: sleep 120
+      
     - name: Upload files to S3
       uses: jakejarvis/s3-sync-action@v0.5.1
       with:
