--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -83,6 +83,7 @@ jobs:
   send-log-files:
     runs-on: ubuntu-latest
     needs: robot-framework
+    if: ${{ always() }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -100,7 +101,7 @@ jobs:
   check-status:
     runs-on: ubuntu-latest
     needs: send-log-files
-    if: failure() 
+    if: ${{ always() }}
     steps:  
     - name: Send Error Details to Google Chat
       env:
