--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -73,13 +73,16 @@ jobs:
       run: |
         for file in ./Formsflow-RobotFramework/test-cases/AdminPermissions.robot; do
           echo "Running test case: $file"
-          robot -d ./Formsflow-RobotFramework/results "$file"
+          robot --outputdir results "$file"
           echo "Sleeping for 1 minute before the next test case"
           sleep 60
         done
       env:
         CHROME_HEADLESS: true
-
+    - name: Save results
+      run: |
+        mkdir -p results
+        mv ./Formsflow-RobotFramework/results results/
   send-log-files:
     runs-on: ubuntu-latest
     needs: robot-framework
