--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -81,8 +81,8 @@ jobs:
         CHROME_HEADLESS: true
     - name: Save results
       run: |
-        mkdir -p results
-        mv ./Formsflow-RobotFramework/results results/
+        mkdir -p ./Formsflow-RobotFramework/results
+        mv ./results/* ./Formsflow-RobotFramework/results/
   send-log-files:
     runs-on: ubuntu-latest
     needs: robot-framework
