--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -88,13 +88,13 @@ jobs:
     - name: Upload files to S3
       uses: jakejarvis/s3-sync-action@v0.5.1
       with:
-        args: --delete
+        args: --acl public-read --delete
+        source: results/
+        dest: s3://${{ secrets.AWS_S3_BUCKET }}/results/
       env:
-        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ca-central-1'
-        SOURCE_DIR: '/home/runner/work/forms-flow-ai-automation-testing/forms-flow-ai-automation-testing/results/'
   check-status:
     runs-on: ubuntu-latest
     needs: send-log-files
