--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -90,7 +90,7 @@ jobs:
       with:
         args: --acl public-read --delete
         source: results/
-        dest: s3://${{ secrets.AWS_S3_BUCKET }}
+        dest: s3://robotframework-formsflow-logs/
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
