--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -71,6 +71,7 @@ jobs:
     - name: Run Robot Framework Tests
       id: robot-test
       run: |
+        mkdir -p results
         for file in ./Formsflow-RobotFramework/test-cases/AdminPermissions.robot; do
           echo "Running test case: $file"
           robot --outputdir results "$file"
@@ -88,9 +89,8 @@ jobs:
     - name: Upload files to S3
       uses: jakejarvis/s3-sync-action@v0.5.1
       with:
-        args: --acl public-read --delete
-        source: results/
-        dest: s3://robotframework-formsflow-logs/
+        entrypoint: aws s3 sync
+        args: results/ s3://${{ secrets.AWS_S3_BUCKET }}/
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
