--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -88,9 +88,9 @@ jobs:
       
     - name: Upload files to S3
       uses: jakejarvis/s3-sync-action@v0.5.1
-      with:
-        entrypoint: aws s3 sync
-        args: results/ s3://${{ secrets.AWS_S3_BUCKET }}/
+    - name: Upload files to S3
+      run: |
+        docker run --rm -v $(pwd)/results:/results -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} amazon/aws-cli s3 sync /results s3://${{ secrets.AWS_S3_BUCKET }}/
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
