--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -90,7 +90,7 @@ jobs:
       uses: jakejarvis/s3-sync-action@v0.5.1
     - name: Upload files to S3
       run: |
-        docker run --rm -v $(pwd)/results:/results -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} amazon/aws-cli s3 sync /results s3://${{ secrets.AWS_S3_BUCKET }}/
+        docker run --rm -v $(pwd)/results:/results -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} amazon/aws-cli s3 sync /results s3://robotframework-formsflow-logs/
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
