--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -88,13 +88,14 @@ jobs:
       
     - name: Upload files to S3
       uses: jakejarvis/s3-sync-action@v0.5.1
-    - name: Upload files to S3
-      run: |
-        docker run --rm -v $(pwd)/results:/results -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} amazon/aws-cli s3 sync /results s3://robotframework-formsflow-logs/
+      with:
+        args: --delete
       env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ca-central-1'
+        SOURCE_DIR: './results/'
   check-status:
     runs-on: ubuntu-latest
     needs: send-log-files
