--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -95,7 +95,7 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ca-central-1'
-        SOURCE_DIR: './results/'
+        SOURCE_DIR: 'results'
   check-status:
     runs-on: ubuntu-latest
     needs: send-log-files
